// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Tests Accordion.stories Default 1`] = `
<div>
  <div>
    <div
      class="css-58nl5l-AccordionToggle ev0bopr3"
      data-cy="accordion-toggle"
      role="button"
    >
      <svg
        aria-label="Caret Right Icon"
        class=""
        fill="none"
        height="16"
        role="img"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.796 7.321a.554.554 0 0 1 0 .858l-3.82 3.181c-.382.319-.976.058-.976-.429V4.57c0-.487.594-.748.976-.43l3.82 3.182Z"
          fill="currentColor"
        />
      </svg>
      <span>
        Accordion
      </span>
    </div>
    <div
      aria-expanded="false"
      class="css-dpq6jj-AnimatedAccordion ev0bopr2"
      data-cy="accordion-collapse-container"
    >
      <div
        class="css-1nylm8s-ContentsContainer ev0bopr1"
      >
        Accordion content
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests Accordion.stories WithSubtitle 1`] = `
<div>
  <div>
    <div
      class="css-58nl5l-AccordionToggle ev0bopr3"
      data-cy="accordion-toggle"
      role="button"
    >
      <svg
        aria-label="Caret Right Icon"
        class=""
        fill="none"
        height="16"
        role="img"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.796 7.321a.554.554 0 0 1 0 .858l-3.82 3.181c-.382.319-.976.058-.976-.429V4.57c0-.487.594-.748.976-.43l3.82 3.182Z"
          fill="currentColor"
        />
      </svg>
      <span>
        Accordion
      </span>
    </div>
    <div
      class="css-158kn6c-SubtitleContainer ev0bopr0"
    >
      Subtitle
    </div>
    <div
      aria-expanded="false"
      class="css-dpq6jj-AnimatedAccordion ev0bopr2"
      data-cy="accordion-collapse-container"
    >
      <div
        class="css-1nylm8s-ContentsContainer ev0bopr1"
      >
        Accordion content
      </div>
    </div>
  </div>
</div>
`;
